--- a/treasure.html
+++ b/treasure.html
@@ -41,7 +41,7 @@
             <div class="d-flex">
                 <div><img src="TC.jpg"height="100" width="100" alt="Treasure Chest "></div>
                 <div><img src="TC.jpg"height="100" width="100" alt="Treasure Chest "></div>
-                <div><img src="TC.jpg"height="100" width="100" alt="Treasure Chest "></div>
+                <div><img src="help.jpg"height="100" width="100" alt="help "></div>
                 <div><img src="TC.jpg"height="100" width="100" alt="Treasure Chest "></div>
                 <div><img src="TC.jpg"height="100" width="100" alt="Treasure Chest "></div>
             </div>
