--- a/flex-add-elements.html
+++ b/flex-add-elements.html
@@ -13,7 +13,7 @@
 /* Responsive layout */
 @media (max-width: 600px) { 
 	 .flex-container{
-		 flex-direction:column;
+		 flex-direction:ROW;
 		 background-color: green;
 	  }
 	}
@@ -31,6 +31,7 @@
 	<p> Press the button to create an new element of type div and then add it to the container.
 		</p>
 		<button onclick="makeNewDiv()">Add one</button>
+		
 	
 	
 </body>
