--- a/cycler.html
+++ b/cycler.html
@@ -37,6 +37,7 @@
 		<button onclick="makeNewDiv()">Add value</button>
 		<button class="btn btn-primary" onclick="get()">Get</button>
 		<button class="btn btn-secondary" onclick ="spin()">Spin</button>
+		<button class="btn btn-primary" type="submit" onclick="swap()">Swap</button>
 	
 	
 </body>
@@ -74,5 +75,18 @@
 	 }
 		
 	}
+	function swap() {
+                let cyclerItems = document.getElementsByClassName("cycler")
+                let container = document.getElementById("target")
+                let a = Math.floor(Math.random() * cyclerItems.length)
+                let b = Math.floor(Math.random() * cyclerItems.length)
+                let firstInnerText = document.getElementsByClassName("cycler")[a]
+                let secondInnerText = document.getElementsByClassName("cycler")[b]
+                if(cyclerItems.length > 1) {
+                    let temp = firstInnerText.innerHTML
+                    firstInnerText.innerHTML = secondInnerText.innerHTML
+                    secondInnerText.innerHTML = temp
+                }
+            }
 </script>
 </html>
